style.css
:root{
    --primery-dark:#222222;
    --light-text-color:#FFF;
    --light-red-color:#FD5956;
    --light-dark:#777;
    --form-background:rgba(241, 241, 241, 0.10);


}
/* .navbar{
    /* padding: 10px 10vw; 
} */
::-webkit-scrollbar{
    width: 0px;
}
.my-hedding{
    padding-right: 0 !important;
    margin: 0;
    display: flex;
        flex-direction: row;
   
}
.hedder-style{
    position: fixed; 
    width: 100%; 
    z-index: 2;
    
}
body{
    
    font-family: 'Roboto', sans-serif;
}

.navbar-local{
    background-color: var(--primery-dark);
    
   
}

.my_name{
    /* font-family: 'Roboto', sans-serif; */
    color: var(--light-text-color);
    font-size:xx-large;
    font-weight: 600;
    margin-right: 20px;
}
.my_title{
 color: var(--light-red-color);
    font-size:x-large;
    font-weight: 500;
    
    text-transform: uppercase;
    letter-spacing: 10px;
    
}
.intro{
    padding-top: 5rem;
    background-color: var(--primery-dark);
    color: var(--light-text-color);

}
.main-content{
    position: absolute;
    width: 100%;
    
}

.content{
    margin-left: 5%;
    margin-right: 1%;
    /* padding: 0 10vw; */
   
}
.discription{
    font-style: normal;
    font-size: 1.125rem;
    font-weight: 400;
}
.caption p{
    z-index: 1;
    /* text-align: justify; */
  

}
/* .image-content{
    
} */
.caption{

  
    /* font-size: 3rem; */
    /* font-size:4dvw; */
    font-size: 4rem;
    font-weight: 900;
    height: 90vh;
    width: 35vw;
    /* padding-left: 5%; */
    margin-left: 5%;
    min-width: 600px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    
}
.image-content{
   /* margin-top: 5rem; */
    position: relative;
   
}

.my-imgae{
    position: absolute;
   
    bottom:0;
    right: 4%;
    z-index: 0;
    min-width: 300px;
    max-width: 500px;
    
}
.my-imgae img{
    max-width: 100%;
    
}
.icons{
    position: absolute;
    right: 10;
    top :0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 100%;
    
}

nav .navbar-nav li a{
    color: var(--light-text-color) !important;
    }
    nav .navbar-nav li a:hover{
        color: var(--light-red-color) !important;
    }
.icons li{
    padding: 10px;
  list-style: none;
}
.icons a{
    color: var(--light-text-color);
}
.icons a:hover{
    color:var(--light-red-color)
}
.boxes{
    color: var(--primery-dark);
    /* padding-top: 50vh; */
    padding-top: 100px;
    /* height: 70vh; */
    /* min-height: 100vh; */
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.inisde-box{
    text-align: center;
    padding: 10px;
    width: 80vw;
    margin: auto;
}
.about-me{
    position: relative;
    /* vertical-align: middle; */
    
    font-family: 'Poppins', sans-serif;
    font-size: medium;
    
    
}

.inisde-box h1{
    font-style: normal;
    font-weight: 600;
    letter-spacing: 2;
}
.about-me p{

font-size:x-large;
font-style: normal;
font-weight: 400;
line-height: normal;
}
.cv-div{
    margin: 60px 0 !important;
    text-align: left;
}
.cv{
 
 text-decoration: none;
 background-color: var(--light-red-color);
 padding: 10px 30px;
 color: var(--light-text-color);
 /* border-radius: 10px; */
 font-weight: 700;
}
.cv:hover{
    background-color: var(--primery-dark);
    color: var(--light-text-color);
}
.cv-div{
    margin: 0;
    
}
.dot{
    color: var(--light-red-color);
}
.left-box-greadint{
    
    position: absolute;
    left:-1150px;
    top: 600px;
    /* bottom: 60vh; */
    width: 101.15544rem;
    height: 31.625rem;
    transform: rotate(60deg);
    /* flex-shrink: 0; */

    background-image: linear-gradient(101deg, #FDC1C5 27.04%, rgba(253, 193, 197, 0.00) 83.13%);
    z-index: 1;
    opacity: 0.5;
}
/* .right-box-greadint{
    position: absolute;
    right:-1350px;
    bottom: 200px;
    z-index: 1;
    width: 101.15544rem;
    height: 31.625rem;
    transform: rotate(-60deg);
    flex-shrink: 0;
    border-radius: 15.8125rem;
    opacity: 0.5;
    background-image: linear-gradient(95deg, rgba(253, 193, 197, 0.00) 8.33%, #FDC1C5 57.27%);

}  */
.lises{
    text-align: left;
    display: flex;
    justify-content: space-between;
}
.lises h4{
    margin-top: 50px;
    color: var(--light-red-color);
    text-transform: uppercase;
}
li,ul{
    list-style: none;
    margin-left: 0;
    padding-left: 0;
}
.hedding-li{
    padding-top: 10px;
    color:var(--primery-dark);
    font-weight: 800;
    font-size: larger;
    text-transform: uppercase;
}
.college{
    color: var(--light-dark);
}
.batch{
    color: var(--light-dark);
}
.expertise-short{
    margin: auto;
    max-width: 600px;
    margin-bottom: 60px;
}
.expert-outer{
   
    background-image: url('./assets/DEVELOPER.svg');
    background-repeat: no-repeat;
    background-size:auto;
    background-size: 240%;
    /* width:max-content;
    height: max-content; */
}
.cards{
    font-family: 'Poppins', sans-serif;
    display: flex;
    justify-content: space-between;
    width: 90vw;
    margin: auto;
    padding: 20px;
    margin-top: 50px;
}
.card{
    max-width: 25vw;
    min-width: 250px;
    height:max-content;
    /* height: 400px; */
    
    background-color: #FFF;
    border: none;
    padding: 20px;
}

.card-center{
   
    margin-top: 60px;
}
.card h4{
    /* text-transform: uppercase; */
    margin-top: 20px;
    font-size: large;
    font-weight: 700;
}
.card img{
    width: 60px;
   
}
.recent_works{
    padding-top: 50px;
}
.recent_works small{
    color: var(--light-red-color);
    text-transform: uppercase;
}
.recent_works h4{
    /* color: var(--light-red-color); */
    max-width: 550px;
    margin: auto;
}
.works-outer{
    margin-top:40px ;
    background-image: url('./assets/WORKS.svg');
    background-repeat: no-repeat;
    
    /* background-size: 240%; */
    background-size:contain;
    /* height: 400px; */
}
.work-card{
    text-align: left;
    padding: 15px;
    border-radius: 20px;
    background-color: var(--light-text-color);
    
}
.work-card div img{
    width: 100%;
    border-radius: 18px;
}
.card-content h5{
    margin-top: 15px;
}
.card-content{
    padding-bottom: 10px;
}
.card-content a{
    padding: 10px 15px;
    border-radius: 10px;
    background-color:var(--primery-dark);
    color: var(--light-text-color);
    text-decoration: none;
}
.card-content a:hover{
    background-color: var(--light-red-color);
}
.course-outer{
    margin-top: 30px;
    background-image: url('./assets/COURSE.svg');
    background-repeat: no-repeat;
    background-size:auto;
    /* background-size: 240%; */
    background-size:contain;
    /* height: 400px; */
}
.contact-us{
    background-color: var(--primery-dark);
    color: var(--light-text-color);
}

.contact-content{
    text-align: left;
    display: flex;
    justify-content: space-between;
}
.contact-content h2 span{
    text-decoration: underline;
}
.contact-content h2{
    max-width: 500px;
    vertical-align: middle;
    margin: auto 0;
    padding: 0px !important;
}
.form input ,.form textarea{
 color: var(--light-text-color);
}
.form input{
    width: 49.5%;
    outline: none;
    background-color: var(--form-background);
    padding: 7px 10px;
    border: none;
    margin: 2px 0px;

    
}
.two-ele{
    display: flex;
    justify-content: space-between;
}
.form textarea{
    outline:  none;
    margin: 2px;
    background-color: var(--form-background);
    border: none;
    color: var(--light-text-color);
    
    width: 100%;
    height: 150px;
    text-align:start;
}
.form button{
    display: flex;
    justify-content: space-between;
    width: 100%;
    background-color:var(--light-red-color);
    padding: 7px 10px;
    color: var(--light-text-color);
    border: none;
}
.form button i{
    margin: auto 0; 
}
.form button:hover{
    background: var(--light-text-color);
    color: var(--primery-dark);
}
footer{
    background-color: var(--primery-dark);
    padding: 10px;
    
}

footer ul{
    list-style: none;
    display: flex;
    justify-content: center;
    
}
footer li,footer a{
    padding: 5px;
    color: var(--light-text-color);
}
footer a:hover{
    color: var(--light-red-color);
}
/* modbiel */
@media only screen and (max-width: 960px) {
    .intro{
        padding-top: 9rem;
        
    
    }
    .main-content{
        position: absolute;
        width: 100%;
        
    }
    
    .content{
        margin-left: 5%;
        margin-right: 1%;
        /* padding: 0 10vw; */
       
    }
    .discription{
        font-style: normal;
        font-size: 1.125rem;
        font-weight: 400;
    }
    .caption p{
        z-index: 1;
        /* text-align: justify; */
      
    
    }
    /* .image-content{
        
    } */
    .caption{
    
      
        /* font-size: 3rem; */
        margin: auto 20px;
        font-size:2.79rem;
        font-weight: 900;
        height: 90vh;
        width: 35vw;
        /* padding-left: 5%; */
        margin-left: 5%;
        min-width:90%;
        display: flex;
        justify-content: left;
        flex-direction: column;
        
    }
    .image-content{
       /* margin-top: 5rem; */
        position: relative;
       
    }
    
    .my-imgae{
        position: absolute;
       
        bottom:0;
        right: 4%;
        z-index: 0;
        max-width: 400px;
        min-width: 200px;
        
    }
    .my-imgae img{
        max-width: 100%;
        
    }
    .icons{
        position: absolute;
        right: 10;
        top :0;
        display: flex;
        justify-content: center;
        flex-direction: column;
        height: 100%;
        
    }
    
    nav .navbar-nav li a{
        color: var(--light-text-color) !important;
        }
        nav .navbar-nav li a:hover{
            color: var(--light-red-color) !important;
        }
    .icons li{
        padding: 10px;
      list-style: none;
    }
    .icons a{
        color: var(--light-text-color);
    }
    .icons a:hover{
        color:var(--light-red-color)
    }
    .about-me p{

        font-size:large;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
    }
    .inisde-box{
        padding:10px;
        margin: auto;
        width: 90vw;
    }
    .lises{
        display: block;
    }
    .cards{
        display: block;
    }
    .card{
        min-width: 100%;
        margin: 30px auto;
    }
    
    .contact-content{
        text-align: left;
        display: block;
        /* justify-content: space-between; */
    }
    .contact-content h2{
        padding: 20px;
        margin-bottom: 40px;
    }
    
} 

@media only screen and (max-width: 600px){
    .my_name{
        /* font-family: 'Roboto', sans-serif; */
        color: var(--light-text-color);
        font-size:xx-large;
        font-weight: 600;
        margin-right: 20px;
    }
    .my_title{
     color: var(--light-red-color);
        font-size:medium;
        font-weight: 500;
        
        text-transform: uppercase;
        letter-spacing: 10px;
        
    }
    .my-hedding{
        display: flex;
        flex-direction: column;
        padding-right: 0 !important;
        margin: 0;
        padding: 0 !important; 
       
    }
    .hedder-style{
        position: fixed; 
        width: 100%; 
        z-index: 2;
        
    }
    .my-imgae{
        position: absolute;
       
        bottom:0;
        right: 80px;
        z-index: 0;
        max-width: 400px;
        min-width: 200px;
        
    }
    /* .caption{
        text-align: center;
    } */
    .icons{
        position: absolute;
        right: 10;
        top :0;
        display: flex;
        justify-content:end;
        flex-direction: column;
        height: 100%;
        
    }
    .cv-div{
        /* margin: auto; */
        text-align: center;
        
    }
    

}

